	
	Note to testers:  In order to make this work, I had to slightly alter the grammar definition,
	   Specifically, the definition of a SYMBOL was changed from:
	     SYMBOL			 = leaf_node_d[ lexeme_d[ ((alpha_p | '_' | '$') >> *(alnum_p | '_' | '$')) ] ];
	   to:
		 SYMBOL			 = leaf_node_d[ lexeme_d[ ((alpha_p | '_' | '$') >> *(alnum_p | '_' | '$' | '.')) ] ];



BUG FIXES:
- Incorrect initialization of new hand and new betting round (jumpingfences)

- The correct blind size will now be inferred in a heads up situation.  (Thanks, PhunkNugget)
  (quiqsilver)
  
- ntraightfill family calculation corrected to give correct result when straight present (Matrix)

- Formula Editor dialog changed to prevent higher than list999 being referenced (Matrix)

- Autoplayer will not act if user not playing (no cards in hand) (Matrix)  

- Fixed inconsistent Window Title after disconnecting from table (Spew)

- All "MessageBox(NULL, ..." calls have had  "| MB_TOPMOST" added to ensure that these popup warnings
  are visible and not hiding below other windows.  (OpenHoldem)
  
- All _beginthread calls have been replaced with AfxCreateThread for better alignment with MFC
  standard practice (OpenHoldem)


v1.8.0 2008-03-29
NEW STUFF:
- New symbol s$potmethod is now available.  This is used to determine the appropriate
  site interpretation for the contents of c0pot0.  s$potmethod can be set to these values:
  - 1: (default, legacy) Common pot
  - 2: (new) Total pot, including current bets and side bets  (Thanks, Nick Coldhand)
  (quiqsilver)
  
- Hand multiplexor symbol capability added.   The three valid hand multiplexor symbols are 
  "f$$X", "f$$XX", and "f$$XXx".  Note that the X's and x's are not case sensitive.
  The purpose of the hand multiplexor is to transfer control to a specific named formula 
  based on your actual 2 card hand.
  
  The X's in the three symbols will be substituted with your actual hand values at time